--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "ngx-clipboard": "^14.0.2",
     "openai": "^2.0.4",
